--- a/Style.css
+++ b/Style.css
@@ -392,18 +392,19 @@ footer {
 }
 /*My Certificates*/
 .view-cert-button {
-  background-color: #007bff;
+    background-color: #4caf50;
   color: white;
-  padding: 12px 20px;
+ padding: 10px 25px;
   border-radius: 10px;
   text-decoration: none;
   font-weight: bold;
   transition: background-color 0.3s ease;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  font-size: 16px;
 }
 
 .view-cert-button:hover {
-  background-color: #0056b3;
+  background-color: #45a049;
   transform: scale(1.05);
 }
 .certificates-gallery {
