--- a/Style.css
+++ b/Style.css
@@ -404,7 +404,7 @@ footer {
 }
 
 .view-cert-button:hover {
-  background-color: #45a049;
+  background-color: #003366;
   transform: scale(1.05);
 }
 .certificates-gallery {
