--- a/Style.css
+++ b/Style.css
@@ -392,7 +392,7 @@ footer {
 }
 /*My Certificates*/
 .view-cert-button {
-    background-color: #4caf50;
+    background-color: #003366;
   color: white;
  padding: 10px 25px;
   border-radius: 10px;
